# violation-detection

./: README.md  docker-compose.yml  init.sql
app/: README.md  pubspec.yaml
app/lib/: main.dart
app/lib/components/: detect_bottom_bar.dart  display_detect.dart  display_info.dart
app/lib/models/: detection.dart  photo_model.dart
app/lib/providers/: detect_provider.dart  photo_provider.dart  track_provider.dart
app/lib/routes/: app_routes.dart
app/lib/screens/: detect_screen.dart  home.dart  info_screen.dart  photo_detail_page.dart  photo_list_page.dart  tracking_screen.dart
app/lib/test_page_function/: get_gps.dart  get_yolo_screen.dart
app/lib/trackers/: centroid_tracker.dart
app/lib/utils/: capture_util.dart  current_time_utils.dart  detect_validator.dart  flashlight_util.dart  image_crop_util.dart  ocr_util.dart  (+2 more)
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: appeal_api.py  car_api.py  police_api.py  report_api.py  user_api.py  violation_api.py
backend/app/core/: database.py  security.py
backend/app/dependencies/: database.py
backend/app/models/: __init__.py  appeals.py  cars.py  police.py  reports.py  users.py  violation.py
backend/app/repositories/: appeal_repository.py  car_repository.py  police_repository.py  report_repository.py  user_repository.py  violation_repository.py
backend/app/schemas/: appeal_schema.py  car_schema.py  police_schema.py  report_schema.py  user_schema.py  violation_schema.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
(+41 files in other folders)
