[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["yeeyeeeyee <aagg50211@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.3"
uvicorn = "^0.44.0"
sqlalchemy = "^2.0.49"
python-dotenv = "^1.2.2"
psycopg = {extras = ["binary"], version = "^3.3.3"}
pydantic = {extras = ["email"], version = "^2.12.5"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
